--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>Document</title>
 </head>
 <body>
     <div id="app">
         <router-view></router-view>
     </div>
+<style>
+    body{
+        margin: 0;
+        background: #7f8c8d;
+    }
+</style>
 </body>
 </html>
